# protein-search

./: CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.cfg
examples/cath/: cath_esm8.yaml  cath_esm_8m.yaml  cath_esm_8m_polaris.yaml  cath_esm_8m_workstation.yaml  faiss-test-cath-20.fasta
examples/cath/cath_esm_8m_embeddings/: config.yaml
examples/cath/cath_esm_8m_embeddings/parsl/000/submit_scripts/: parsl.htex.block-0.1708454831.376191.sh  parsl.htex.block-0.1708454831.376191.sh.err
examples/cath/cath_esm_8m_faiss/: dataset_info.json  state.json
examples/embedding/: sprot_esm_8m.yaml
examples/sprot/: faiss-test-sprot.fasta  sprot_esm_650m.yaml  sprot_esm_8m.yaml
examples/trembl/: trembl_esm_650m.yaml
protein_search/: __init__.py  cli.py  distributed_inference.py  parsl.py  registry.py  search.py  utils.py  xml_to_fasta.py
protein_search/datasets/: cath.py
protein_search/embedders/: __init__.py  auto.py  base.py  esm2.py
tests/: protein_search_test.py
